--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,4 +25,19 @@ services:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     volumes:
       - ./mysql:/var/lib/mysql
+  fillr:
+    container_name: fillr
+    build:
+      context: ./UserFiller/
+      dockerfile: ./Dockerfile
+    environment:
+      - FILLR__User__UserName=${User__UserName}
+      - FILLR__User__Email=${User__Email}
+      - FILLR__User__Password=${User__Password}
+      - FILLR__Connection__WebApi=${Connection__WebApi}
+    depends_on:
+      - web
+    links:
+      - web
+    
 
