--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,10 +31,10 @@ services:
       context: ./UserFiller/
       dockerfile: ./Dockerfile
     environment:
-      - FILLR__User__UserName=${User__UserName}
-      - FILLR__User__Email=${User__Email}
-      - FILLR__User__Password=${User__Password}
-      - FILLR__Connection__WebApi=${Connection__WebApi}
+      - FILLR__User__UserName=${FILLR__User__UserName}
+      - FILLR__User__Email=${FILLR__User__Email}
+      - FILLR__User__Password=${FILLR__User__Password}
+      - FILLR__Connection__WebApi=${FILLR__Connection__WebApi}
     depends_on:
       - web
     links:
