--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,23 +6,24 @@ services:
       context: ./WebApi/
       dockerfile: ./Dockerfile
     environment:
-      - ASPNETCORE_URLS=http://+:5000
-      - ASPNETCORE_ConnectionStrings__QueueDb=${ASPNETCORE_ConnectionStrings__QueueDb}
-      - ASPNETCORE_jwtTokenConfig__secret=${ASPNETCORE_jwtTokenConfig__secret}
-      - ASPNETCORE_jwtTokenConfig__issuer=${ASPNETCORE_jwtTokenConfig__issuer}
-      - ASPNETCORE_jwtTokenConfig__audience=${ASPNETCORE_jwtTokenConfig__audience}
+      - ASPNETCORE_ENVIRONMENT
+      - ASPNETCORE_URLS
+      - ASPNETCORE_ConnectionStrings__QueueDb
+      - ASPNETCORE_jwtTokenConfig__secret
+      - ASPNETCORE_jwtTokenConfig__issuer
+      - ASPNETCORE_jwtTokenConfig__audience
     depends_on: 
       - db
     links: 
       - db
     ports:
-      - "8080:5000"
+      - "5000:5000"
   db:
     container_name: db
     image: "mysql/mysql-server:8.0.26"
     environment:
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE
+      - MYSQL_ROOT_PASSWORD
     volumes:
       - ./mysql:/var/lib/mysql
   fillr:
@@ -31,13 +32,24 @@ services:
       context: ./UserFiller/
       dockerfile: ./Dockerfile
     environment:
-      - FILLR__User__UserName=${FILLR__User__UserName}
-      - FILLR__User__Email=${FILLR__User__Email}
-      - FILLR__User__Password=${FILLR__User__Password}
-      - FILLR__Connection__WebApi=${FILLR__Connection__WebApi}
+      - FILLR_User__UserName
+      - FILLR_User__Email
+      - FILLR_User__Password
+      - FILLR_Connection__WebApi
     depends_on:
       - web
-    links:
-      - web
+    # links:
+    #   - web
+  front:
+    container_name: front
+    image: "nginx:alpine"
+    ports: 
+      - "80:80"
+    volumes:
+      - ./Frontend/build:/usr/share/nginx/html
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - fillr
+    
     
 
