feature: wait scripts

--- a/WebApi/Dockerfile
+++ b/WebApi/Dockerfile
@@ -19,4 +19,5 @@ RUN dotnet publish "WebApi.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY wait-for.sh .
 ENTRYPOINT ["dotnet", "WebApi.dll"]
