--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,15 @@ services:
       - db
     ports:
       - "5000:5000"
+    entrypoint: ["/app/wait-for.sh", "db:3306", "--"]
+    command: ["dotnet", "WebApi.dll"]
+    #restart: on-failure
+    # healthcheck:
+    #   test: ["CMD", "curl", "-f", "http://localhost:5000/health_check"]
+    #   interval: 1m30s
+    #   timeout: 10s
+    #   retries: 3
+    #   start_period: 40s
   db:
     container_name: db
     image: "mysql/mysql-server:8.0.26"
@@ -26,6 +35,12 @@ services:
       - MYSQL_ROOT_PASSWORD
     volumes:
       - ./mysql:/var/lib/mysql
+    # healthcheck:
+    #   test: "/usr/bin/mysql --user=root --password=${MYSQL_ROOT_PASSWORD} --execute \"SHOW DATABASES;\""
+    #   interval: 1m30s
+    #   timeout: 10s
+    #   retries: 3
+    #   start_period: 40s
   fillr:
     container_name: fillr
     build:
@@ -38,8 +53,10 @@ services:
       - FILLR_Connection__WebApi
     depends_on:
       - web
-    # links:
-    #   - web
+    links:
+      - web
+    entrypoint: ["/app/wait-for.sh", "web:5000", "--"]
+    command: ["dotnet", "UserFiller.dll"]
   front:
     container_name: front
     image: "nginx:alpine"
@@ -49,6 +66,8 @@ services:
       - ./Frontend/build:/usr/share/nginx/html
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
+      - fillr
+    links:
       - fillr
     
     
