--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name front;
     
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+
     location /api {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -10,9 +13,7 @@ server {
     }
 
     location / {
-        root /user/share/nginx/html;
         try_files $uri /index.html;
-        index index.html;
     }
 }
 
