--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -12,6 +12,8 @@
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.18" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.17" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.2" />
+      <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+      <PackageReference Include="Serilog.Sinks.Map" Version="1.0.2" />
       <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.4.1" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.4.1" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.4.1" />
