fix[docker]: close ports for outside of host (#21)
* fix[docker]: expose 3306

* fix[docker]: expose on web

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
       - db
     links: 
       - db
-    ports:
-      - "5000:5000"
+    expose:
+      - "5000"
     entrypoint: ["/app/wait-for.sh", "db:3306", "--"]
     command: ["dotnet", "WebApi.dll"]
   db:
@@ -34,8 +34,8 @@ services:
     volumes:
       - ./mysql:/var/lib/mysql
       - ./sqlinit:/docker-entrypoint-initdb.d/:ro
-    ports:
-      - "3306:3306"
+    expose:
+      - "3306"
   fillr:
     container_name: fillr
     build:
