--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,10 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "jwtTokenConfig": {
