--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,10 @@ services:
       - db
     expose:
       - "5000"
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "10"
     entrypoint: ["/app/wait-for.sh", "db:3306", "--"]
     command: ["dotnet", "WebApi.dll"]
   db:
@@ -36,6 +40,10 @@ services:
       - ./sqlinit:/docker-entrypoint-initdb.d/:ro
     expose:
       - "3306"
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "3"
   fillr:
     container_name: fillr
     build:
@@ -66,6 +74,10 @@ services:
       - fillr
     links:
       - fillr
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "10"
     
     
 
