--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -1,22 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <RootNamespace>LocateBackend</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.17" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.17" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.17" />
-      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.18" />
-      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.17" />
-      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0" />
       <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
       <PackageReference Include="Serilog.Sinks.Map" Version="1.0.2" />
-      <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.4.1" />
-      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.4.1" />
-      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.4.1" />
+      <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.0.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.0.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.0.0" />
     </ItemGroup>
 
 
