--- a/UserFiller/Dockerfile
+++ b/UserFiller/Dockerfile
@@ -1,9 +1,9 @@
 ﻿
 
-FROM mcr.microsoft.com/dotnet/core/runtime:3.1-alpine AS base
+FROM mcr.microsoft.com/dotnet/runtime:6.0-alpine AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["UserFiller.csproj", "./"]
 RUN dotnet restore "./UserFiller.csproj"
