--- a/UserFiller/UserFiller.csproj
+++ b/UserFiller/UserFiller.csproj
@@ -2,19 +2,19 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.21" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.21" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.21" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.21" />
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.21" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.21" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.21" />
-      <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+      <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
