feat[userfiller]: size-optimized golang impl

--- a/UserFiller/Dockerfile
+++ b/UserFiller/Dockerfile
@@ -1,18 +1,11 @@
-﻿
+﻿FROM golang:alpine as builder
+WORKDIR /app 
+COPY ["main.go", "./"]
+COPY ["go.mod", "./"]
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o publish/UserFiller -ldflags="-w -s" .
 
-FROM mcr.microsoft.com/dotnet/runtime-deps:6.0-alpine-amd64 AS base
+FROM alpine:latest
 WORKDIR /app
-
-FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine AS publish
-WORKDIR /src
-COPY ["UserFiller.csproj", "./"]
-RUN dotnet restore "./UserFiller.csproj" -r linux-musl-x64
-COPY . .
-#WORKDIR "/src/UserFiller"
-RUN dotnet publish "UserFiller.csproj" -r linux-musl-x64 --self-contained true -c Release -o /app/publish /p:PublishTrimmed=true /p:PublishReadyToRun=true
-
-FROM base AS final
-WORKDIR /app
-COPY --from=publish /app/publish ./
 COPY wait-for.sh ./
-ENTRYPOINT ["./UserFiller"]
+COPY --from=builder /app/publish/UserFiller /usr/bin/
+ENTRYPOINT ["UserFiller"]
