--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -19,5 +19,9 @@
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Features\Scripting\Services" />
+    </ItemGroup>
+
 
 </Project>
